--- a/config/stg.yaml
+++ b/config/stg.yaml
@@ -1,6 +1,7 @@
 service:
   dm_api_account: http://5.63.153.31:5051
   mailhog: http://5.63.153.31:5025
+  dm_api_search: 5.63.153.31:5052
 
 database:
   dm3_5:
